--- a/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
+++ b/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
@@ -384,6 +384,9 @@
     <Compile Include="Drivers\JsonDataTableFieldDriver.cs" />
     <Compile Include="Drivers\JsonDataTablePartDriver.cs" />
     <Compile Include="FrontendExtensions\Shapes\ImageShapes.cs" />
+    <Compile Include="Projections\ConfigurableSortCriterionProvider.cs" />
+    <Compile Include="Projections\ConfigurableSortCriterionProviderForm.cs" />
+    <Compile Include="Projections\SortCriterionConfiguration.cs" />
     <Compile Include="Routes\MaintenanceRoutes.cs" />
     <Compile Include="Routes\PermissionExtensionRoutes.cs" />
     <Compile Include="Handlers\CurrentContentCacheEvictionHandler.cs" />
