--- a/src/Modules/Laser.Orchard.NwazetIntegration/bundleconfig.json
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/bundleconfig.json
@@ -16,5 +16,17 @@
     "inputFiles": [
       "Scripts/ecommerce-tag-manager.js"
     ]
+  },
+  {
+    "outputFileName": "Scripts/territories-autocomplete.min.js",
+    "inputFiles": [
+      "Scripts/territories-autocomplete.js"
+    ]
+  },
+  {
+    "outputFileName": "Scripts/tagit.min.js",
+    "inputFiles": [
+      "Scripts/tagit.js"
+    ]
   }
 ]
