--- a/src/Modules/Laser.Orchard.NwazetIntegration/packages.config
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="5.1.1" targetFramework="net452" />
+  <package id="BuildWebCompiler" version="1.12.394" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
