--- a/src/Modules/Laser.Orchard.PayPal/Laser.Orchard.PayPal.csproj
+++ b/src/Modules/Laser.Orchard.PayPal/Laser.Orchard.PayPal.csproj
@@ -97,9 +97,13 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\PayPalController.cs" />
     <Compile Include="Handler\PayPalSiteSettingsHandler.cs" />
     <Compile Include="Models\PayPalSiteSettingsPart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\PayPalPosService.cs" />
+    <Compile Include="ViewModels\PaymentVM.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets.json" />
@@ -128,12 +132,12 @@
       <Name>Laser.Orchard.StartupConfig</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="Views\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\PayPal\Index.cshtml" />
+    <Content Include="Placement.info" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
