verify correct order id

--- a/src/Modules/Laser.Orchard.PayPal/Laser.Orchard.PayPal.csproj
+++ b/src/Modules/Laser.Orchard.PayPal/Laser.Orchard.PayPal.csproj
@@ -59,6 +59,10 @@
       <HintPath>..\..\..\..\Orchard\src\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Laser.Orchard.OpenAuthentication.Vodafone\bin\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -101,8 +105,11 @@
     <Compile Include="Controllers\PayPalController.cs" />
     <Compile Include="Handler\PayPalSiteSettingsHandler.cs" />
     <Compile Include="Models\PayPalSiteSettingsPart.cs" />
+    <Compile Include="Models\CheckOrderResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IPayPalService.cs" />
     <Compile Include="Services\PayPalPosService.cs" />
+    <Compile Include="Services\PayPalService.cs" />
     <Compile Include="ViewModels\PaymentVM.cs" />
   </ItemGroup>
   <ItemGroup>
