modify activity send template for use localization

--- a/src/Modules/Laser.Orchard.TemplateManagement/Laser.Orchard.TemplateManagement.csproj
+++ b/src/Modules/Laser.Orchard.TemplateManagement/Laser.Orchard.TemplateManagement.csproj
@@ -403,6 +403,10 @@
       <Project>{085948ff-0e9b-4a9a-b564-f8b8b4bdddbc}</Project>
       <Name>Orchard.JobsQueue</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Modules\Orchard.Localization\Orchard.Localization.csproj">
+      <Project>{FBC8B571-ED50-49D8-8D9D-64AB7454A0D6}</Project>
+      <Name>Orchard.Localization</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Modules\Orchard.MediaLibrary\Orchard.MediaLibrary.csproj">
       <Project>{73a7688a-5bd3-4f7e-adfa-ce36c5a10e3b}</Project>
       <Name>Orchard.MediaLibrary</Name>
